trying https again but with wss routing

--- a/drawshare/templates/drawshare/room.html
+++ b/drawshare/templates/drawshare/room.html
@@ -38,7 +38,7 @@
 
     let drawSocket = new WebSocket(
         'wss://' + window.location.host +
-        '/ws/drawshare/' + roomName + '/');
+        '/wss/drawshare/' + roomName + '/');
 
     drawSocket.onmessage = function(e) {
         let data = JSON.parse(e.data);
