forgot I changed wss to ws for local work, changing back to wss

--- a/drawshare/templates/drawshare/room.html
+++ b/drawshare/templates/drawshare/room.html
@@ -39,7 +39,7 @@
 
     let roomName = {{ room_name_json }};
     let drawSocket = new WebSocket(
-        'ws://' + window.location.host +
+        'wss://' + window.location.host +
         '/wss/drawshare/' + roomName + '/');
     let x1;
     let y1;
